--- a/External_Lectures.ipynb
+++ b/External_Lectures.ipynb
@@ -63,7 +63,7 @@
     }
    ],
    "source": [
-    "os.listdir(\"../Python/\")"
+    "os.listdir(\"../Python/\") # Add comment for github"
    ]
   },
   {
