--- a/External_Lectures.ipynb
+++ b/External_Lectures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1968,25 +1968,320 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ba',\n",
+       " 'babiak',\n",
+       " 'bajura',\n",
+       " 'balcar',\n",
+       " 'barta',\n",
+       " 'brunclik',\n",
+       " 'burdam',\n",
+       " 'bychkova',\n",
+       " 'chalupa',\n",
+       " 'colak',\n",
+       " 'cotte',\n",
+       " 'dlouhy',\n",
+       " 'drabek',\n",
+       " 'dvorak',\n",
+       " 'nick',\n",
+       " 'faltynova',\n",
+       " 'fencl',\n",
+       " 'firtova',\n",
+       " 'flek',\n",
+       " 'fungacova',\n",
+       " 'galuscak',\n",
+       " 'gapko',\n",
+       " 'gloverova',\n",
+       " 'halada',\n",
+       " 'hanousek',\n",
+       " 'hedbavny',\n",
+       " 'holicky',\n",
+       " 'honzik',\n",
+       " 'horacek',\n",
+       " 'hromadkova',\n",
+       " 'hulle',\n",
+       " 'huskova',\n",
+       " 'jandik',\n",
+       " 'janhuba',\n",
+       " 'janicko',\n",
+       " 'jirak',\n",
+       " 'johanis',\n",
+       " 'john',\n",
+       " 'jurajda',\n",
+       " 'kalenda',\n",
+       " 'kastl',\n",
+       " 'kotlan',\n",
+       " 'kovar',\n",
+       " 'krehlik',\n",
+       " 'kudashvili',\n",
+       " 'lukasek',\n",
+       " 'mateju',\n",
+       " 'mistrova',\n",
+       " 'mlynkova',\n",
+       " 'mysikova',\n",
+       " 'pompella',\n",
+       " 'poslusna',\n",
+       " 'prazak',\n",
+       " 'privoznikova',\n",
+       " 'reiterman',\n",
+       " 'richter',\n",
+       " 'rusnak',\n",
+       " 'sgraham',\n",
+       " 'sekanina',\n",
+       " 'sidorkin',\n",
+       " 'sladky',\n",
+       " 'smid',\n",
+       " 'srholec',\n",
+       " 'stavrunova',\n",
+       " 'streblov',\n",
+       " 'nuria',\n",
+       " 'svoboda',\n",
+       " 'tsomocos123',\n",
+       " 'madarova',\n",
+       " 'tuma',\n",
+       " 'vejnar',\n",
+       " 'vlasak',\n",
+       " 'vyhnanek',\n",
+       " 'walos',\n",
+       " 'wang123',\n",
+       " 'wintr',\n",
+       " 'zak',\n",
+       " 'zeleny']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# firtsly scrapping via functions (not OOP):\n",
-    "def getSoup(link):\n",
-    "    sleep(0.1)\n",
-    "    r = requests.get(link)\n",
-    "    r.encoding = \"UTF-8\"\n",
-    "    return BeautifulSoup(r.text, \"lxml\")"
+    "Instance_IES = External('https://ies.fsv.cuni.cz/en/node/49')\n",
+    "Instance_IES.getID()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Mgr. Lei Ba ',\n",
+       " ' Mykola Babiak MA',\n",
+       " 'doc. JUDr. Mgr. Jan Bajura Ph.D.',\n",
+       " 'Ing. Petr Balcar MSBE',\n",
+       " 'RNDr. Tomáš Bárta Ph.D.',\n",
+       " 'PhDr. Miloš Brunclík Ph.D.',\n",
+       " ' Martin Burda M.A., Ph.D.',\n",
+       " ' Olga Bychkova M.A.',\n",
+       " 'Mgr. Ivan Chalupa ',\n",
+       " ' Gonul Colak Ph.D.',\n",
+       " ' Pamela Cotte ',\n",
+       " 'Ing. Vladimír Dlouhý CSc.',\n",
+       " 'dr. Ing. Zdeněk Drábek B.A., D.Phil.',\n",
+       " 'PhDr. Vladimír Dvořák ',\n",
+       " ' Nick Elms ',\n",
+       " 'Ing. Regina Faltýnová ',\n",
+       " 'Ing. Tomáš Fencl CFA, MBA ',\n",
+       " 'Mgr.Ing. Magdalena Fiřtová Ph.D.',\n",
+       " 'doc. Ing. Vladislav Flek CSc.',\n",
+       " 'Ing. Zuzana Fungáčová M.A., Ph.D.',\n",
+       " 'PhDr. Kamil Galuščák ',\n",
+       " 'PhDr. Petr Gapko Ph.D.',\n",
+       " 'Mgr. Michaela Gloverová Konečná ',\n",
+       " 'Doc. PhDr. Jan Halada CSc.',\n",
+       " 'prof. RNDr. Jan Hanousek CSc.',\n",
+       " 'PhDr. Petr Hedbávný ',\n",
+       " 'doc. RNDr. Petr Holický CSc.',\n",
+       " 'Mgr. Petr Honzík Ph.D.',\n",
+       " 'JUDr. Tomáš Horáček Ph.D.',\n",
+       " 'Mgr. Eva Hromádková ',\n",
+       " 'Mgr. Tomáš Hülle ',\n",
+       " 'prof. RNDr. Marie Hušková DrSc.',\n",
+       " ' Tomáš Jandík, CFA, MRICS ',\n",
+       " 'PhDr. Radek Janhuba M.A.',\n",
+       " 'PhDr. Ing Martin Janíčko PhD.',\n",
+       " 'Prof., PhDr. Jan Jirák Ph.D.',\n",
+       " 'doc. RNDr. Michal Johanis PhD.',\n",
+       " 'doc. RNDr. Oldřich John CSc.',\n",
+       " 'prof. Ing. Štěpán Jurajda Ph.D.',\n",
+       " 'doc. RNDr. Ondřej Kalenda Ph.D., DSc.',\n",
+       " ' Jakub Kastl Ph.D.',\n",
+       " 'Ing. Viktor Kotlán PhD.',\n",
+       " ' Kamil Kovář M.A. M.Sc.',\n",
+       " 'Mgr. Tomáš Křehlík M.A., Ph.D.',\n",
+       " 'Mgr. Nikoloz Kudashvili ',\n",
+       " 'JUDr. Ing. Mgr. Libor Lukášek Ph.D.',\n",
+       " ' Jakub Matějů ',\n",
+       " 'PhDr. Veronika Mistrová ',\n",
+       " 'PhDr. Ludmila Mlýnková ',\n",
+       " 'PhDr. Martina Mysíková Ph.D.',\n",
+       " 'prof. Maurizio Pompella ',\n",
+       " 'Mgr. Lucie Poslušná ',\n",
+       " 'Mgr. Pavel Pražák ',\n",
+       " 'Mgr. Pavla Přívozníková ',\n",
+       " 'Mgr. David Reiterman ',\n",
+       " 'doc. JUDr. Tomáš Richter LL.M., Ph.D.',\n",
+       " 'PhDr. Marek Rusnák M.A., Ph.D.',\n",
+       " 'Prof. Bryan S.Graham ',\n",
+       " 'Mgr. Ondřej Sekanina LL.M.',\n",
+       " ' Oleg Sidorkin M.A., CSc.',\n",
+       " 'Ing. Karel Sladký CSc.',\n",
+       " 'RNDr. Martin Šmíd Ph.D.',\n",
+       " ' Martin Srholec ',\n",
+       " 'Dr. Olena  Stavrunova ',\n",
+       " 'PhDr. Pavel Streblov M.Sc.',\n",
+       " ' Nuria Suárez Suárez Ph.D.',\n",
+       " 'Mgr.  Svatopluk Svoboda ',\n",
+       " ' Dimitri P.  Tsomocos   ',\n",
+       " 'Mgr. Henrieta Tulejová M.S.',\n",
+       " 'doc. Ing. Zdeněk Tůma CSc.',\n",
+       " 'Mgr. Benjamin Vejnar Ph.D.',\n",
+       " 'Mgr. Václav Vlasák Ph.D.',\n",
+       " 'PhDr. Tomáš Vyhnánek ',\n",
+       " 'Ing. Michal Walos ',\n",
+       " ' Dianju Wang M.A.',\n",
+       " 'doc. JUDr. PhDr. Jan Wintr Ph.D.',\n",
+       " 'prof. Ing. Milan Žák CSc.',\n",
+       " 'doc. RNDr. Miroslav Zelený Ph.D.']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Instance_IES = External('https://ies.fsv.cuni.cz/en/node/49')\n",
+    "Instance_IES.getName()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'r2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-62-d2af52b0b116>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mInstance_IES\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msaveDFs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-52-3d5f95cbbf0f>\u001b[0m in \u001b[0;36msaveDFs\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0msaveDFs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 34\u001b[1;33m         \u001b[0mexternal\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[1;34m\"Names\"\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mr2\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     35\u001b[0m         \u001b[0mdf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mexternal\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     36\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mdf\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'r2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "Instance_IES.saveDFs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
+    "class External:\n",
+    "    '''\n",
+    "    Downloader manager for External lecturers from IES\n",
+    "    \n",
+    "    It contains methods for collection of links, downloading itself and storing results\n",
+    "    '''\n",
+    "    def __init__(self, link):\n",
+    "        self.link = link\n",
+    "        \n",
+    "    def getSoup(self):\n",
+    "        r = requests.get(self.link)\n",
+    "        r.encoding = \"UTF-8\"\n",
+    "        soup = BeautifulSoup(r.text, \"lxml\")\n",
+    "        return soup\n",
+    "    \n",
+    "    def getAllLinks(self):\n",
+    "        soup2 = self.getSoup().findAll(\"td\", {\"class\": \"peopleTableCellName\"})\n",
+    "        links2 = [\"https://ies.fsv.cuni.cz\" + s.find(\"a\")[\"href\"] for s in soup2]\n",
+    "        return links2\n",
+    "    \n",
+    "    def getName(self):\n",
+    "        r2 = []\n",
+    "        for li in self.getAllLinks():\n",
+    "            r3 = requests.get(li)\n",
+    "            r3.encoding = \"UTF-8\"\n",
+    "            r4 = BeautifulSoup(r3.text, \"lxml\").find(\"h2\").text\n",
+    "            r2.append(r4)\n",
+    "            \n",
+    "        return r2\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    def saveDFs(self):\n",
+    "        df = pd.DataFrame(self.getName())\n",
+    "        return df\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,link):\n",
+    "        self.soup = getSoup(link)\n",
+    "        self.office = self.getNextSiblingOfStrong('Office:')\n",
+    "        self.phone = self.getNextSiblingOfStrong('Phone:')\n",
+    "        \n",
+    "    def getNextSiblingOfStrong(self,characteristic):\n",
+    "        strong = self.soup.find('strong',text=characteristic)\n",
+    "        return strong.next_sibling\n",
+    "\n",
+    "people = [Person(link) for link in links[:2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'requests' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-2-a4c9b59eaa68>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mBf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'https://ies.fsv.cuni.cz/en/node/49'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-1-1825a10c90bb>\u001b[0m in \u001b[0;36mgetSoup\u001b[1;34m(link)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# firtsly scrapping via functions (not OOP):\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgetSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlink\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m     \u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mencoding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"UTF-8\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mBeautifulSoup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtext\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"lxml\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'requests' is not defined"
+     ]
+    }
+   ],
+   "source": [
     "Bf = getSoup('https://ies.fsv.cuni.cz/en/node/49')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getID(self):\n",
+    "         # 'https://ies.fsv.cuni.cz/en/staff/zeleny'\n",
+    "        IDs = [id.split('/')[-1] for id in self.getAllLinks()]\n",
+    "        return IDs"
    ]
   },
   {
@@ -3562,97 +3857,6 @@
     "external = {\"Name\": names, \"ID\": IDs}\n",
     "df = pd.DataFrame(external, index = idx)\n",
     "df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class Person:\n",
-    "    def __init__(self,link):\n",
-    "        self.soup = getSoup(link)\n",
-    "        self.office = self.getNextSiblingOfStrong('Office:')\n",
-    "        self.phone = self.getNextSiblingOfStrong('Phone:')\n",
-    "        \n",
-    "    def getNextSiblingOfStrong(self,characteristic):\n",
-    "        strong = self.soup.find('strong',text=characteristic)\n",
-    "        return strong.next_sibling\n",
-    "\n",
-    "people = [Person(link) for link in links[:2]]\n",
-    "for p_instance in people:\n",
-    "    p_instance.full_name = p_instance.soup.find('h2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class IES_External:\n",
-    "    def __init__(self, link):\n",
-    "\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# firtsly scrapping via functions (not OOP):\n",
-    "def getSoup(link):\n",
-    "    sleep(0.1)\n",
-    "    r = requests.get(link)\n",
-    "    r.encoding = \"UTF-8\"\n",
-    "    return BeautifulSoup(r.text, \"lxml\")\n",
-    "\n",
-    "def getAllLinks(link):\n",
-    "    soup = getSoup(link)\n",
-    "    tds = soup.findAll('td', {'class':'peopleTableCellName'})\n",
-    "    return ['https://ies.fsv.cuni.cz' + td.find('a')['href'] for td in tds]\n",
-    "\n",
-    "links = getAllLinks('http://ies.fsv.cuni.cz/en/node/49')\n",
-    "links"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    def __init__(self,allowLog=True):\n",
-    "        '''\n",
-    "        creates IES_Downloader object with self.links, that store links to be downloaded\n",
-    "        and self.people, self.courses and self.theses to store individual IES_Web-like objects\n",
-    "        '''\n",
-    "        self.allowLog = allowLog\n",
-    "        self.links = {\n",
-    "            'people':{},\n",
-    "            'courses':[],\n",
-    "            'theses':{}\n",
-    "        }\n",
-    "        self.people = []\n",
-    "        self.courses = []\n",
-    "        self.theses = []\n",
-    "        \n",
-    "        if self.allowLog:\n",
-    "            print('Succesfully initialized IES Downloader')\n",
-    "class Person:\n",
-    "    def __init__(self,link):\n",
-    "        self.soup = getSoup(link)\n",
-    "        self.office = self.getNextSiblingOfStrong('Office:')\n",
-    "        self.phone = self.getNextSiblingOfStrong('Phone:')\n",
-    "        \n",
-    "    def getNextSiblingOfStrong(self,characteristic):\n",
-    "        strong = self.soup.find('strong',text=characteristic)\n",
-    "        return strong.next_sibling\n",
-    "\n",
-    "people = [Person(link) for link in links[:2]]"
    ]
   }
  ],
