Nejako to nefunguje, meh.

--- a/Politicke_Finance.ipynb
+++ b/Politicke_Finance.ipynb
@@ -80,7 +80,7 @@
     }
    ],
    "source": [
-    "# Gradual testing\n",
+    "# Gradual testing - not final version, chci spat\n",
     "Instance_Finance = External('http://www.politickefinance.cz')\n",
     "Instance_Finance.getSoup() # OK\n",
     "Instance_Finance.getName() # OK\n",
