--- a/Demagog.ipynb
+++ b/Demagog.ipynb
@@ -40,7 +40,7 @@
     }
    ],
    "source": [
-    "requests.get('https://demagog.cz/robots.txt')"
+    "requests.get('https://demagog.cz/robots.txt') # Test push git before Midterm"
    ]
   },
   {
@@ -142,6 +142,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
